# weatherApp

./: .gitignore  README.MD  main.py  package.json
backend/: pyproject.toml
backend/crud_db/: update.py
crud_db/: delete.py  insert.py  read.py
frontend/: package-lock.json
frontend/src/: App.css  App.jsx
frontend/src/components/: footer.jsx  main.jsx
frontend/src/input/: input.jsx
frontend/src/subComponent/: current.jsx  errorBanner.jsx  map&media.jsx  saved.jsx  successBanner.jsx
getWeather/: weatherForcast.py
model/: db.py  model.py
src/: App.jsx
src/components/: footer.jsx  header.jsx  main.jsx
src/glassCard/: glassCard.jsx
src/subComponent/: current.jsx  dateRange.jsx  map&media.jsx  saved.jsx  skeletonCard.jsx  utils.js
util/: utils.py
